# ai-at-dscubed

./: .gitignore  ARCHITECTURE.md  CLAUDE.local.md  CLAUDE.md  check_bronze_data.py  check_discord_chats.py  output.xlsx  pyproject.toml  start_here.bat  summary.txt  summary2.txt  verify_parent_integrity.py  verify_silver_data.py  ~$output.xlsx
.bmad-core/: install-manifest.yaml
.claude/: settings.local.json
.claude/history/: 2025-01-18-notion-crud-refactor.md  2025-01-19-project-refactoring.md
.contextr/: .ignore  state.json
api/: client.py  config.py  service.py
apps/: Workflow.md
apps/archive/darcy/: fact_processing_engine.py  notion_crud_engine_v3.py
apps/archive/darcy_backend/: messages.py  pyproject.toml
apps/archive/discord/: pyproject.toml
apps/archive/discord_v2/: bot.py  engine_manager.py  message_processor.py
apps/archive/scrum_checkup/: pyproject.toml
apps/brain/: pipeline.py  pyproject.toml
apps/brain/bronze_pipelines/: discord_channel.py  discord_chat.py  discord_reaction.py  discord_relevant_channels.py  notion_committee.py  run_all_bronze_pipelines.py
apps/brain/data_source_extractors/: discord_extractor.py  pyproject.toml  transcript_cleaner.py  youtube_transcript.py
apps/brain/silver_pipelines/: bronze_to_silver_transformer.py  pyproject.toml
apps/brain/silver_pipelines/conversation_detector/: README.md  conversation_detector.py  plan.txt  pyproject.toml  verify_results.py
apps/brain_v2_app/: messages_module.py  pyproject.toml  resolve_member_identities.py
apps/darcy/: pyproject.toml
apps/darcy/darcy/: __main__.py  engine_bridge.py  tool_chat_engine.py
apps/darcy_backend/: handlers.py  main.py  messages.py
apps/darcy_backend/engines/: __init__.py  notion_crud_engine_v3.py
apps/discord/: engine_manager.py
apps/discord_v2/: bot.py  components.py  config.py  engine_manager.py  message_processor.py  pyproject.toml  session_manager.py  slash-commands.py
apps/discord_v2/api/: client.py
apps/meeting_recorder_bot/: pyproject.toml
brain/bronze/pipelines/: discord_channel.py  discord_chat.py  discord_relevant_channels.py
brain/processing_transcripts_info/: database_setup.yaml
brain/processing_transcripts_info/DDL/: committee.sql  meeting.sql  meeting_members.sql  meeting_projects.sql  project.sql  project_members.sql  sample_projects.sql
brain/processing_transcripts_info/DML/: committee.sql  meeting.sql  meeting_members.sql  (+4 more)
custom_tools/gemini/: ask_Gemini25Flash.py
custom_tools/notion/: __init__.py  crud.py  notion_prompt.md  types.py
custom_tools/transcript_topics/: README.md  get_transcript_topics.py  main.py  pyproject.toml  run_topic_detection.py  run_transcript_topics.py  topic_detection.py  topic_detection_final.py  topic_generator.py  topic_shift_detection.py
custom_tools/transcript_topics/samples/: sample_2_out.txt  sample_out_2.txt  sample_transcript_2.txt
darcy/: notion_crud_engine_v3.py
libs/brain/: pyproject.toml
libs/brain-orm/: pyproject.toml
libs/brain/bronze/DDL/: discord_channel.sql  discord_chat.sql  discord_reaction.sql  discord_relevant_channels.sql
libs/brain/silver/: check_committee.py  check_internal_tables.py  check_messages_data.py  check_table_structure.py  create_internal_tables.py  create_new_tables.py  database_setup.yaml  discord_to_meetings.py  discord_to_projects.py  dummy_data.sql  ingest_dummy_data.py  meeting_to_participants.py  meeting_to_projects.py  member_to_projects.py  notion_to_meetings.py  project_to_meetings.py  project_to_members.py  realistic_dummy_data_v2.sql
libs/brain/silver/DDL/: committee.sql  internal_msg_component.sql  internal_msg_convo_members.sql  internal_msg_convos.sql  internal_msg_members.sql  internal_msg_message.sql  internal_msg_message_convo_members .sql  internal_msg_message_convo_members.sql  internal_msg_reactions.sql  internal_text_channel_convos.sql  internal_text_chnl_convo_members.sql  internal_text_chnl_msg_convo_member.sql  meeting.sql  meeting_members.sql  meeting_projects.sql  meeting_topics.sql  project.sql  project_members.sql  topic.sql
libs/brain/silver/DML/: committee.sql  meeting.sql  meeting_members.sql  meeting_projects.sql  project.sql  project_members.sql
libs/brain/silver/cleaned_meeting_transcripts/: lecture_05-04-2025_ai_project_overview.txt  lecture_20-04-2025_new_ai_project_proposal.txt  workshop_01-04-2025_committee_management_winter_cohort.txt  workshop_05-05-2025_ai_website_discord_bot_projects.txt  workshop_15-04-2025_meeting_analytics_dashboard.txt
libs/brain_v2/: pyproject.toml
libs/brain_v2/silver/: create_table_components.sql  create_table_message_mentions.sql  create_table_messages.sql  create_table_reactions.sql
libs/brain_v2/ssot/: create_function_ensure_member_for_discord.sql  create_function_identity_for_discord.sql  create_schemas.sql  create_table_member_identities.sql  create_table_members.sql
libs/cast/: README.md  pyproject.toml  test_cast.py
libs/discord/: pyproject.toml
libs/email/: email_users.sql  email_workflow.sql  emails.sql
libs/org_tools/: pyproject.toml
libs/org_tools/org_tools/brain/: __init__.py
libs/org_tools/org_tools/brain/notion/: __init__.py
libs/org_tools/org_tools/brain/postgres/: bronze_api.py  bronze_data_access.py  postgres.py
libs/org_tools/org_tools/fact_checking/: functions.py
libs/org_tools/org_tools/general/: functions.py
libs/org_tools/org_tools/mcp_servers/notion/: notion_integration.py  tools.py
libs/org_tools/org_tools/notion/: generate_schema.py  schema.json  specs.md
libs/org_tools/org_tools/notion/raw/: __init__.py  client.py  documents.py  events_projects.py  teams.py
libs/org_types/: pyproject.toml
programs/agenticsearch/: agent.py  main.py  searchengine.py  searchtools.py
programs/discord-v2/: bot.py  engine_manager.py  message_processor.py  slash-commands.py
programs/meeting-recorder-bot/: recorderbot.py
programs/processing_transcripts/: transcript_cleaner.py
programs/samples/: sample_engine.py
programs/team-assignment/: bot.py  config.py  groupfunctions.py  main.py  session_manager.py  team_engine.py
(+103 files in other folders)
