[project]
name = "ai-at-dscubed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord>=2.3.2",
    "llmgine",
    "notion>=0.0.28",
    "psycopg2-binary>=2.9.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "apps/darcy",
    "apps/meeting_recorder_bot",
    "libs/cast",
    "libs/org_tools",
    "libs/org_types",
    "libs/brain",
    "libs/discord",
    "llmgine",
]

[tool.uv.sources]
# Core dependency
llmgine = { workspace = true }

# Library packages
org_types = { workspace = true }
org_tools = { workspace = true }
brain = { workspace = true }
cast = { workspace = true }
discord-framework = { workspace = true }
brain_v2 = { workspace = true }

# App packages
meeting-recorder-bot = { workspace = true }
scrum-checkup = { workspace = true }
brain_v2-app = { workspace = true }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
packages = ["src", "custom_tools"]
