[project]
name = "brain_v2-app"
version = "0.1.0"
description = "Brain v2 app"
dependencies = [
    "llmgine",
    "psycopg>=3.2.10",
    "psycopg-pool>=3.2.6",
]

[tool.uv.sources]
llmgine = { workspace = true }
discord = { workspace = true }
psycopg2-binary = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_v2"]
