[project]
name = "darcy"
version = "0.1.0"
description = "Notion CRUD engines and fact processing"
requires-python = ">=3.13"
dependencies = ["llmgine", "org_tools", "org_types", "brain"]

[tool.uv.sources]
llmgine = { workspace = true }
org_tools = { workspace = true }
org_types = { workspace = true }
brain = { workspace = true }

[project.scripts]
darcy = "darcy.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["darcy"]
