[project]
name = "darcy"
version = "0.1.0"
description = "Darcy Discord bot application"
requires-python = ">=3.13"
dependencies = [
    "discord-framework",
    "cast",
    "llmgine",
    "litellm>=1.44.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
discord-framework = { workspace = true }
cast = { workspace = true }
llmgine = { workspace = true }

[project.scripts]
darcy-bot = "darcy.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["darcy"]
