[project]
name = "ai-discord-bot-v2"
version = "0.2.0"
description = "Discord bot v2 for AI at D3"
requires-python = ">=3.13"
dependencies = [
    "llmgine",
    "org_tools",
    "org_types",
    "discord.py>=2.3.2",
    "python-dotenv>=1.1.0",
]

[tool.uv.sources]
llmgine = { workspace = true }
org_tools = { workspace = true }
org_types = { workspace = true }

[project.scripts]
discord-bot-v2 = "discord_v2.bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["discord_v2"]