[project]
name = "brain-orm"
version = "0.1.0"
description = "SQLAlchemy ORM core for AI at D3 brain data processing"
requires-python = ">=3.13"
dependencies = [
    "llmgine",
    "org_types",
    "org_tools",
    "sqlalchemy>=2.0.40",
    "pandas>=2.2.3",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
]

[tool.uv.sources]
llmgine = { workspace = true }
org_types = { workspace = true }
org_tools = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_orm"]