[project]
name = "brain-lib"
version = "0.1.0"
description = "Data processing pipelines for AI at D3"
requires-python = ">=3.13"
dependencies = [
    "llmgine",
    "org_types",
    "org_tools",
    "sqlalchemy>=2.0.40",
    "pandas>=2.2.3",
    "notion-client>=2.3.0",
]

[tool.uv.sources]
llmgine = { workspace = true }
org_types = { workspace = true }
org_tools = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain"]