[project]
name = "brain_v2"
version = "0.1.0"
description = "Brain v2 app"
dependencies = ["llmgine"]

[tool.uv.sources]
llmgine = { workspace = true }
discord = { workspace = true }
psycopg2-binary = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_v2"]