[project]
name = "org_tools"
version = "0.1.0"
description = "Tools and utilities for AI at D3"
requires-python = ">=3.13"
dependencies = [
    "llmgine",
    "notion-client>=2.3.0",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "google-api-python-client>=2.169.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "mcp>=1.10.1",
]

[tool.uv.sources]
llmgine = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["org_tools"]
