[project]
name = "ai-discord-bot"
version = "0.1.0"
description = "Discord bot for AI at D3"
requires-python = ">=3.13"
dependencies = [
    "llmgine",
    "org_tools",
    "org_types",
    "discord.py>=2.3.2",
    "python-dotenv>=1.1.0",
]

[tool.uv.sources]
llmgine = { workspace = true }
org_tools = { workspace = true }
org_types = { workspace = true }

[project.scripts]
discord-bot = "discord.bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["discord"]