[project]
name = "conversation-detector"
version = "0.1.0"
description = "Conversation detection engine for text channel messages"
authors = [
    {name = "AI Team", email = "ai@dscubed.org"}
]
dependencies = [
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.28.0",
    "python-dotenv>=1.0.0",
    "llmgine",
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["conversation_detector"] 